Rutas y componentes creados y comienzo de diseño de vistas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SILAUProject</title>
+  <title>SILAU S.A.S.</title>
 </head>
 <body>
-  <h1>Bienvenido a angular</h1>
-  <app-counter></app-counter>
+  <app-header></app-header>
+  <app-slider></app-slider>
+  <router-outlet></router-outlet>
 </body>
 </html>
