--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,1 +1,19 @@
-<h1>Hola</h1>
+<main class="mt-8 pt-5 border-t-2 border-t-neutral-200">
+    <div class="max-w-3xl mx-auto container text-center">
+        <h1 class="text-3xl font-bold mb-3 text-neutral-700">
+            Nuestra Empresa
+        </h1>
+        <p class="text-lg text-neutral-700">
+            SILAU S.A.S, con dos décadas de experiencia en Duitama, Boyacá, es líder en la comercialización de elementos decorativos de madera de alta calidad, especializándose en enmarcar fotografías. Ofrecemos portarretratos, retablos y enmarcaciones únicas, distinguiéndonos por diseños exclusivos que superan expectativas. SILAU S.A.S se enorgullece de la calidad e innovación que caracterizan nuestros productos.
+        </p>
+    </div>
+    <h2 class="mt-10 max-w-7xl mx-auto container text-2xl font-semibold text-gray-800">Productos destacados</h2>
+    <div class="mt-5 max-w-7xl mx-auto container grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-5">
+        <app-card-product url="../../../assets/images/slider/img_1.jpeg" name="Producto 1"></app-card-product>
+        <app-card-product url="../../../assets/images/slider/img_2.jpeg" name="Producto 2"></app-card-product>
+        <app-card-product url="../../../assets/images/slider/img_3.jpeg" name="Producto 3"></app-card-product>
+        <app-card-product url="../../../assets/images/slider/img_3.jpeg" name="Producto 3"></app-card-product>
+        <app-card-product url="../../../assets/images/slider/img_3.jpeg" name="Producto 3"></app-card-product>
+        <app-card-product url="../../../assets/images/slider/img_3.jpeg" name="Producto 3"></app-card-product>
+    </div>
+</main>
