--- a/src/app/shared/slider/slider.component.html
+++ b/src/app/shared/slider/slider.component.html
@@ -1,15 +1,15 @@
-<div class="container-carrousel">
-    <div class="carrousels">
-        <section class="slider-section">
-            <img src="" alt="Imagen carrusel 1">
+<div class="container-carrousel shadow-xl" #carouselContainer>
+    <div class="carrousels h-full flex" #carousels style="transition: transform 0.5s ease;">
+        <section class="slider-section" #sliderSection>
+            <img src="../../../assets/images/slider/img_1.jpeg" alt="Imagen carrusel 1">
         </section>
-        <section class="slider-section">
-            <img src="" alt="Imagen carrusel 2">
+        <section class="slider-section" #sliderSection>
+            <img src="../../../assets/images/slider/img_2.jpeg" alt="Imagen carrusel 2">
         </section>
-        <section class="slider-section">
-            <img src="" alt="Imagen carrusel 3">
+        <section class="slider-section" #sliderSection>
+            <img src="../../../assets/images/slider/img_3.jpeg" alt="Imagen carrusel 3">
         </section>
-        <button class="btn-left"><</button>
-        <button class="btn-rigth">></button>
     </div>
+    <button (click)="moveToLeft()" class="btn-left"><</button>
+    <button (click)="moveToRight()" class="btn-rigth">></button>
 </div>
