Modulos de inicio y empresa terminados

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,6 @@
   <app-header></app-header>
   <app-slider></app-slider>
   <router-outlet></router-outlet>
+  <app-footer></app-footer>
 </body>
 </html>
