--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,29 @@
-<p>footer works!</p>
+<footer class="bg-brand-yellow py-10 mt-20">
+    <div class="flex justify-around mx-auto max-w-6xl container text-center text-white">
+        <div class="flex flex-col gap-3">
+            <h4 class="font-semibold text-xl">Sobre SILAU S.A.S</h4>
+            <ul class="text-lg">
+                <li>
+                    Barrio San Luis - Duitama
+                </li>
+                <li>
+                    Carrera 34 # 16 - 60
+                </li>
+                <li>
+                    egutierrezbotia&#64;yahoo.com.co
+                </li>                
+            </ul>
+        </div>
+        <div class="flex flex-col gap-3">
+            <h4  class="font-semibold text-xl">Redes Sociales</h4>
+            <ul  class="text-lg">
+                <li>
+                    <a class="hover:text-xl hover:text-brand-gray duration-200" target="_blank" href="https://www.facebook.com/SILAUS.A.S/?locale=es_LA"><i class="fa-brands fa-facebook"></i> Facebook</a>
+                </li>
+                <li>
+                    <a class="hover:text-xl hover:text-brand-gray duration-200" target="_blank" href="https://www.instagram.com/enmarcaciones_fotografia/"><i class="fa-brands fa-instagram"></i> Instagram</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</footer>
