--- a/src/app/shared/slider/slider.component.html
+++ b/src/app/shared/slider/slider.component.html
@@ -9,6 +9,9 @@
         <section class="slider-section" #sliderSection>
             <img src="../../../assets/images/slider/img_3.jpeg" alt="Imagen carrusel 3">
         </section>
+        <section class="slider-section" #sliderSection>
+            <img src="../../../assets/images/slider/img_4.jpeg" alt="Imagen carrusel 4">
+        </section>
     </div>
     <button (click)="moveToLeft()" class="btn-left"><</button>
     <button (click)="moveToRight()" class="btn-rigth">></button>
