--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -7,13 +7,15 @@
             SILAU S.A.S, con dos décadas de experiencia en Duitama, Boyacá, es líder en la comercialización de elementos decorativos de madera de alta calidad, especializándose en enmarcar fotografías. Ofrecemos portarretratos, retablos y enmarcaciones únicas, distinguiéndonos por diseños exclusivos que superan expectativas. SILAU S.A.S se enorgullece de la calidad e innovación que caracterizan nuestros productos.
         </p>
     </div>
-    <h2 class="mt-10 max-w-7xl mx-auto container text-2xl font-semibold text-gray-800">Productos destacados</h2>
-    <div class="mt-5 max-w-7xl mx-auto container grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-5">
-        <app-card-product url="../../../assets/images/slider/img_1.jpeg" name="Producto 1"></app-card-product>
-        <app-card-product url="../../../assets/images/slider/img_2.jpeg" name="Producto 2"></app-card-product>
-        <app-card-product url="../../../assets/images/slider/img_3.jpeg" name="Producto 3"></app-card-product>
-        <app-card-product url="../../../assets/images/slider/img_3.jpeg" name="Producto 3"></app-card-product>
-        <app-card-product url="../../../assets/images/slider/img_3.jpeg" name="Producto 3"></app-card-product>
-        <app-card-product url="../../../assets/images/slider/img_3.jpeg" name="Producto 3"></app-card-product>
+    <div class="mx-10">
+        <h2 class="mt-10 max-w-7xl mx-auto container text-2xl font-bold text-gray-800">Productos destacados</h2>
+        <div class="mt-5 max-w-7xl mx-auto container grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-5">
+            <app-card-product [price]="21000" url="../../../assets/images/products/img-1.jpeg" name="Producto 1"></app-card-product>
+            <app-card-product [price]="32000" url="../../../assets/images/products/img-6.jpeg" name="Producto 2"></app-card-product>
+            <app-card-product [price]="18000" url="../../../assets/images/products/img-7.jpeg" name="Producto 3"></app-card-product>
+            <app-card-product [price]="22000" url="../../../assets/images/products/img-10.jpeg" name="Producto 3"></app-card-product>
+            <app-card-product [price]="32000" url="../../../assets/images/products/img-11.jpeg" name="Producto 3"></app-card-product>
+            <app-card-product [price]="19000" url="../../../assets/images/products/img-12.jpeg" name="Producto 3"></app-card-product>
+        </div>
     </div>
 </main>
