--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -28,10 +28,12 @@
             </ul>
             <ul class="flex w-full flex-1 justify-center items-center gap-5">
                 <li class="relative">
-                    <input class="outline-none p-2 border text-neutral-500 border-neutral-400 rounded-md" type="text" placeholder="Buscar">
-                    <button>
-                        <img class="absolute w-8 top-2/4 -translate-y-2/4 right-0" src="../../../assets/images/buscar.png" alt="">
-                    </button>
+                    <form action="">
+                        <input class="outline-none p-2 border text-neutral-500 border-neutral-400 rounded-md" type="text" placeholder="Buscar">
+                        <button>
+                            <img class="absolute w-8 top-2/4 -translate-y-2/4 right-0" src="../../../assets/images/buscar.png" alt="">
+                        </button>
+                    </form>
                 </li>
                 <li>
                     <a class="" routerLink="/login">
