--- a/src/app/features/dashboard/dashboard.component.html
+++ b/src/app/features/dashboard/dashboard.component.html
@@ -1,7 +1,9 @@
 <div class="content-container h-screen">
     <app-side-bar [parentElement]="main"></app-side-bar>
-    <main #main class="main-content ml-0 p-8 duration-500 ease-in-out text-justify sm:ml-60">
-        <h2>Dashboard</h2>
+    <main #main class="main-content ml-0 p-8 duration-500 ease-in-out text-justify sm:ml-60 bg-gray-100">
+        <div *ngIf="showDashboard">
+            <h2>Dashboard</h2>
+        </div>
         <router-outlet></router-outlet>
     </main>
 </div>
