--- a/src/app/shared/side-bar/side-bar.component.html
+++ b/src/app/shared/side-bar/side-bar.component.html
@@ -3,7 +3,7 @@
     <i class="fa-solid fa-bars"></i>
     <i class="fa-solid fa-xmark"></i>
 </div>
-<div #lateral_bar  class="lateral-bar fixed shadow-xl overflow-x-auto w-60 h-full p-4 overflow-hidden duration-500 ease-in-out flex flex-col justify-between gap-3 bg-white">
+<div #lateral_bar  class="lateral-bar z-50 fixed shadow-xl w-60 h-full p-4 overflow-hidden duration-500 ease-in-out flex flex-col justify-between gap-3 bg-white">
     <div>
         <div class="mb-5 page-name flex items-center gap-5 w-full">
             <i #icon (click)="moveMenu()" class="cursor-pointer fa-solid fa-truck-fast text-brand-yellow text-xl"></i>
@@ -23,7 +23,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="cursor-pointer flex gap-5 items-center text-yellow-intense text-xl rounded-xl w-full hover:bg-neutral-200 py-2 duration-300" href="/customers">
+                    <a class="cursor-pointer flex gap-5 items-center text-yellow-intense text-xl rounded-xl w-full hover:bg-neutral-200 py-2 duration-300" href="/dashboard/customers">
                         <i class="min-w-12 fas fa-user-tie"></i>
                         <span #span class="duration-500 ease-in-out">Clientes</span>
                     </a>
