--- a/src/app/features/dashboard/customers/customers.component.html
+++ b/src/app/features/dashboard/customers/customers.component.html
@@ -1,11 +1,11 @@
 <main class="p-5">
     <h2 class="text-neutral-700 font-bold text-2xl uppercase">Lista de clientes</h2>
-    <button class="btn-add my-5 relative duration-500 overflow-hidden flex gap-2 justify-center items-center font-semibold text-white bg-brand-yellow py-2 px-5 text-lg rounded-md hover:scale-105">
+    <button (click)="openModal()" class="btn-add my-5 relative duration-500 overflow-hidden flex gap-2 justify-center items-center font-semibold text-white bg-brand-yellow py-2 px-5 text-lg rounded-md hover:scale-105">
         <i class="fa fa-plus"></i>
         <span>Nuevo</span>
     </button>
     <section class="bg-white px-2 py-4">
-        <div class="flex justify-between items-center">
+        <div class="flex justify-between items-center flex-col sm:flex-row gap-5">
             <p class="flex gap-2 text-lg items-center">
                 <span>Mostrar</span>
                 <select class="w-16 px-1 border border-gray-300 rounded-md bg-gray-50 text-gray-700 focus:border-orange-500 focus:ring-2 focus:ring-orange-400 outline-none">
@@ -43,6 +43,7 @@
                         <th class="px-4 py-2 border-b border-gray-200 font-semibold">Dirección</th>
                         <th class="px-4 py-2 border-b border-gray-200 font-semibold">Celular</th>
                         <th class="px-4 py-2 border-b border-gray-200 font-semibold">Estado</th>
+                        <th class="px-4 py-2 border-b border-gray-200 font-semibold">Acciones</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -54,18 +55,68 @@
                         <td class="px-4 py-2 border-b border-gray-200">Calle Ficticia 123, Bogotá</td>
                         <td class="px-4 py-2 border-b border-gray-200">+57 300 123 4567</td>
                         <td class="px-4 py-2 border-b border-gray-200 font-bold"><span class="bg-pink-300 text-purple-800 px-2 py-1 rounded">Activo</span></td>
-                    </tr>
-                    <tr class="hover:bg-gray-50">
-                        <td class="px-4 py-2 border-b border-gray-200">2</td>
-                        <td class="px-4 py-2 border-b border-gray-200">María Gómez</td>
-                        <td class="px-4 py-2 border-b border-gray-200">XYZ Ltda.</td>
-                        <td class="px-4 py-2 border-b border-gray-200">{{ 'maria.gomez@example.com' }}</td>
-                        <td class="px-4 py-2 border-b border-gray-200">Carrera 45 #32-19, Medellín</td>
-                        <td class="px-4 py-2 border-b border-gray-200">+57 320 987 6543</td>
-                        <td class="px-4 py-2 border-b border-gray-200 font-bold"><span class="bg-pink-300 text-purple-800 px-2 py-1 rounded">Inactivo</span></td>
+                        <td class="px-4 py-2 border-b border-gray-200 font-bold">
+                            <button (click)="openModal()" class="scale-105 cursor-pointer">
+                                <i class="fa fa-pencil text-blue-500 mr-3"></i>
+                            </button>
+                            <button class="scale-105 cursor-pointer">
+                                <i class="fa fa-trash text-red-500"></i>
+                            </button>
+                        </td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </section>
+    <div #modal_container class="modal-container fixed z-[888] w-full h-screen top-0 left-0 flex justify-center items-center">
+        <div #modal class="modal p-4 modal-close relative w-3/4 font-bold h-4/5 text-center bg-white rounded-xl transition-transform duration-1000 ease-in-out translate-y-0 overflow-y-auto">
+            <h3 class="text-neutral-700 text-2xl text-left">Agregar cliente</h3>
+            <button (click)="closeModal()" class="hover:scale-105 hover:shadow-md duration-200 absolute right-4 top-4 flex justify-center items-center w-7 h-7 rounded-full bg-red-600 text-white">
+                <i class="fa fa-close"></i>
+            </button>
+            <div class="flex justify-center items-center">
+                <img class="w-40 h-40" src="/../../../../assets/images/dashboard/customer-review.png" alt="" srcset="">
+            </div>
+            <form action="" class="container max-w-4xl mx-auto mt-10">
+                <div class="flex gap-10 justify-between mt-10 text-xl sm:flex-row flex-col">
+                    <div class="relative flex-1 input-box">
+                        <input type="text" name="name" class="outline-none border border-neutral-700 p-2 rounded-md bg-transparent w-full" required>
+                        <label for=""  class="duration-300 text-neutral-700 absolute top-0 left-0 p-2 pointer-events-none">Nombre</label>
+                    </div>
+                    <div class="relative flex-1 input-box">
+                        <input type="text" name="last_name" class="outline-none border border-neutral-700 p-2 rounded-md bg-transparent w-full" required>
+                        <label for="" class="duration-300 text-neutral-700 absolute top-0 left-0 p-2 pointer-events-none">Apellido</label>
+                    </div>
+                </div>
+                <div class="flex gap-10 justify-between mt-10 text-xl sm:flex-row flex-col">
+                    <div class="relative flex-1 input-box">
+                        <input type="number" name="phone" class="outline-none border border-neutral-700 p-2 rounded-md bg-transparent w-full" required>
+                        <label for=""  class="duration-300 text-neutral-700 absolute top-0 left-0 p-2 pointer-events-none">Celular</label>
+                    </div>
+                    <div class="relative flex-1 input-box">
+                        <input type="email" name="email" class="outline-none border border-neutral-700 p-2 rounded-md bg-transparent w-full" required>
+                        <label for="" class="duration-300 text-neutral-700 absolute top-0 left-0 p-2 pointer-events-none">Email</label>
+                    </div>
+                </div>
+                <div class="pt-3 mt-5 mb-5 border-t border-neutral-500 text-left  w-full">
+                    <p class="text-white bg-brand-yellow w-full p-2 font-light text-lg">Detalles de la empresa</p>
+                </div>
+                <div class="relative mt-10 text-xl input-box">
+                    <input type="text" name="name_enterprise" class="outline-none border border-neutral-700 p-2 rounded-md bg-transparent w-full" required>
+                    <label for="" class="duration-300 text-neutral-700 absolute top-0 left-0 p-2 pointer-events-none">Nombre de la empresa</label>
+                </div>
+                <div class="flex gap-10 justify-between mt-10 text-xl sm:flex-row flex-col">
+                    <div class="relative flex-1 input-box">
+                        <input type="number" name="code" class="outline-none border border-neutral-700 p-2 rounded-md bg-transparent w-full" required>
+                        <label for=""  class="duration-300 text-neutral-700 absolute top-0 left-0 p-2 pointer-events-none">Código</label>
+                    </div>
+                    <div class="relative flex-1 input-box">
+                        <input type="text" name="address" class="outline-none border border-neutral-700 p-2 rounded-md bg-transparent w-full" required>
+                        <label for="" class="duration-300 text-neutral-700 absolute top-0 left-0 p-2 pointer-events-none">Dirección</label>
+                    </div>
+                </div>
+                <button class="mt-5 p-2 bg-brand-yellow hover:bg-yellow-intense hover:rounded-md px-5 font-bold text-white text-xl duration-300 hover:shadow-xl">Agregar</button>
+            </form>
+        </div>
+    </div>
 </main>
