--- a/src/app/shared/side-bar/side-bar.component.html
+++ b/src/app/shared/side-bar/side-bar.component.html
@@ -17,13 +17,13 @@
         <nav class="py-5 border-b-2 border-neutral-200 overflow-y-auto max-h-[400px]">
             <ul class="flex flex-col gap-5 text-center">
                 <li>
-                    <a class="cursor-pointer  flex gap-5 items-center text-yellow-intense text-xl rounded-xl w-full hover:bg-neutral-200 py-2 duration-300" href="/dashboard/users">
+                    <a class="cursor-pointer  flex gap-5 items-center text-yellow-intense text-xl rounded-xl w-full hover:bg-neutral-200 py-2 duration-300" routerLink="/dashboard/users">
                         <i class="min-w-12 fa-regular fa-user"></i>
                         <span #span class="duration-500 ease-in-out">Usuarios</span>
                     </a>
                 </li>
                 <li>
-                    <a class="cursor-pointer flex gap-5 items-center text-yellow-intense text-xl rounded-xl w-full hover:bg-neutral-200 py-2 duration-300" href="/dashboard/customers">
+                    <a class="cursor-pointer flex gap-5 items-center text-yellow-intense text-xl rounded-xl w-full hover:bg-neutral-200 py-2 duration-300" routerLink="/dashboard/customers">
                         <i class="min-w-12 fas fa-user-tie"></i>
                         <span #span class="duration-500 ease-in-out">Clientes</span>
                     </a>
@@ -36,13 +36,13 @@
                     </button>
                     <ul class="list__show w-4/5 ml-auto border-l-2 border-neutral-700 duration-300 h-0">
                         <li class="pl-3 text-left">
-                            <a class="flex justify-between px-1 items-center text-brand-gray font-semibold py-3 nav__link--inside" href="/orders/new">
+                            <a class="flex justify-between px-1 items-center text-brand-gray font-semibold py-3 nav__link--inside" routerLink="/orders/new">
                                 <i class="fas fa-plus-circle"></i>
                                 <span #span>Agregar Pedido</span>
                             </a>
                         </li>
                         <li class="pl-3 text-left">
-                            <a class="flex justify-between px-1 items-center text-brand-gray font-semibold py-3 nav__link--inside" href="/orders/edit">
+                            <a class="flex justify-between px-1 items-center text-brand-gray font-semibold py-3 nav__link--inside" routerLink="/orders/edit">
                                 <i class="fas fa-edit"></i>
                                 <span #span>
                                     Editar Pedido
@@ -50,7 +50,7 @@
                             </a>
                         </li>
                         <li class="pl-3 text-left">
-                            <a class="flex justify-between px-1 items-center text-brand-gray font-semibold py-3 nav__link--inside" href="/orders">
+                            <a class="flex justify-between px-1 items-center text-brand-gray font-semibold py-3 nav__link--inside" routerLink="/orders">
                                 <i class="fas fa-list"></i>
                                 <span #span>
                                     Lista Pedidos
@@ -67,7 +67,7 @@
                     </button>
                     <ul class="list__show w-4/5 ml-auto border-l-2 border-neutral-700 duration-300 h-0">
                         <li class="pl-3 text-left">
-                            <a class="flex justify-between px-1 items-center text-brand-gray font-semibold py-3 nav__link--inside" href="/stock/new">
+                            <a class="flex justify-between px-1 items-center text-brand-gray font-semibold py-3 nav__link--inside" routerLink="/stock/new">
                                 <i class="fas fa-plus-circle"></i>
                                 <span #span>
                                     Agregar Producto
@@ -75,7 +75,7 @@
                             </a>
                         </li>
                         <li class="pl-3 text-left">
-                            <a class="flex justify-between px-1 items-center text-brand-gray font-semibold py-3 nav__link--inside" href="/stock/edit">
+                            <a class="flex justify-between px-1 items-center text-brand-gray font-semibold py-3 nav__link--inside" routerLink="/stock/edit">
                                 <i class="fas fa-edit"></i>
                                 <span #span>
                                     Editar Producto
@@ -83,17 +83,17 @@
                             </a>
                         </li>
                         <li class="pl-3 text-left">
-                            <a class="flex justify-between px-1 items-center text-brand-gray font-semibold py-3 nav__link--inside" href="/stock">
+                            <a class="flex justify-between px-1 items-center text-brand-gray font-semibold py-3 nav__link--inside" routerLink="/dashboard/list-products">
                                 <i class="fas fa-list"></i>
                                 <span #span>
-                                    Lista Producto
+                                    Lista Productos
                                 </span>
                             </a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a class="cursor-pointer flex gap-5 items-center text-yellow-intense text-xl rounded-xl w-full hover:bg-neutral-200 py-2 duration-300" href="">
+                    <a class="cursor-pointer flex gap-5 items-center text-yellow-intense text-xl rounded-xl w-full hover:bg-neutral-200 py-2 duration-300" routerLink="">
                         <i class="min-w-12 fas fa-sign-out-alt"></i>
                         <span #span class="duration-500 ease-in-out">Salir</span>
                     </a>
