--- a/src/app/features/dashboard/list-products/line/line-products.component.html
+++ b/src/app/features/dashboard/list-products/line/line-products.component.html
@@ -16,7 +16,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let linea of lineas" class="border-b">
+            <tr *ngFor="let linea of lineProducts" class="border-b">
             <td class="p-2">{{linea.idLineaProducto}}</td>
             <td class="p-2">{{linea.nombreLinea}}</td>
             <td class="p-2">
