--- a/src/app/features/dashboard/customers/customers.component.css
+++ b/src/app/features/dashboard/customers/customers.component.css
@@ -30,9 +30,34 @@
 
 .input-box input:valid ~ label,
 .input-box textarea:valid ~ label,
+.input-box select:valid ~ label,
+.input-box select:focus ~ label,
 .input-box input:focus ~ label,
 .input-box textarea:focus ~ label{
     font-weight: bold;
     transform: translateY(-80%);
     font-size: 1rem;
+}
+
+.fade-in-out {
+    animation: fadeInOut 10s ease-in-out;
+}
+
+@keyframes fadeInOut {
+    0% {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    10% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    90% {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    100% {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
 }
