--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -10,12 +10,12 @@
     <div class="mx-10">
         <h2 class="mt-10 max-w-7xl mx-auto container text-2xl font-bold text-gray-800">Productos destacados</h2>
         <div class="mt-5 max-w-7xl mx-auto container grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-5">
-            <app-card-product [price]="21000" url="../../../assets/images/products/img-1.jpeg" name="Producto 1"></app-card-product>
-            <app-card-product [price]="32000" url="../../../assets/images/products/img-6.jpeg" name="Producto 2"></app-card-product>
-            <app-card-product [price]="18000" url="../../../assets/images/products/img-7.jpeg" name="Producto 3"></app-card-product>
-            <app-card-product [price]="22000" url="../../../assets/images/products/img-10.jpeg" name="Producto 3"></app-card-product>
-            <app-card-product [price]="32000" url="../../../assets/images/products/img-11.jpeg" name="Producto 3"></app-card-product>
-            <app-card-product [price]="19000" url="../../../assets/images/products/img-12.jpeg" name="Producto 3"></app-card-product>
+            <app-card-product [price]="21000" url="../../../assets/images/products/img-1.jpeg" name="Portarretrato Tallado"></app-card-product>
+            <app-card-product [price]="32000" url="../../../assets/images/products/img-6.jpeg" name="Portarretrato Vintage"></app-card-product>
+            <app-card-product [price]="18000" url="../../../assets/images/products/img-7.jpeg" name="Enmarcación Roble"></app-card-product>
+            <app-card-product [price]="22000" url="../../../assets/images/products/img-10.jpeg" name="Enmarcación Blanca"></app-card-product>
+            <app-card-product [price]="32000" url="../../../assets/images/products/img-11.jpeg" name="Enmarcación Oscura"></app-card-product>
+            <app-card-product [price]="19000" url="../../../assets/images/products/img-12.jpeg" name="Tríptico Minimalista"></app-card-product>
         </div>
     </div>
 </main>
